--- a/cmake/version.rc.in
+++ b/cmake/version.rc.in
@@ -21,7 +21,7 @@ BEGIN
 			VALUE "FileDescription", "@PROJECT_NAME@"
 			VALUE "FileVersion", "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@.@PROJECT_VERSION_TWEAK@"
 			VALUE "InternalName", "@PROJECT_NAME@"
-			VALUE "LegalCopyright", "© 2025 Thiago Kaique MIT Licence"
+			VALUE "LegalCopyright", "© 2026 RavenKZP MIT Licence"
 			VALUE "ProductName", "@PROJECT_NAME@"
 			VALUE "ProductVersion",  "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@"
 		END
